--- a/DevForm/DevFormAz/DevFormAz/Views/Home/FormPage.cshtml
+++ b/DevForm/DevFormAz/DevFormAz/Views/Home/FormPage.cshtml
@@ -51,14 +51,14 @@
                                                 </button>
                                             </div>
                                             <div class="modal-body">
-                                                <form id="createPost" enctype="multipart/form-data">
+                                                <form id="createPost" method="post"  action="/Home/FormPage" enctype="multipart/form-data">
                                                     <div class="form-group">
                                                         <label for="recipient-name" class="col-form-label">Başlıq</label>
-                                                        <input type="text" name="name" class="form-control" id="recipient-name">
+                                                        <input type="text" name="name" class="form-control" id="formTitle">
                                                     </div>
                                                     <div class="form-group">
                                                         <label for="message-text" class="col-form-label">Mesaj</label>
-                                                        <textarea class="form-control" name="description" id="message-text"></textarea>
+                                                        <textarea class="form-control" name="description" id="formDesc"></textarea>
                                                     </div>
                                                     <div class="form-group">
                                                         <label for="upload-file" class="col-form-label">Şəkil yüklə</label>
@@ -71,7 +71,7 @@
                                                     </div>
                                                     <div class="modal-footer">
                                                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Ləğv et</button>
-                                                        <button id="sharebtn" type="button" class="btn btn-primary">Paylaş</button>
+                                                        <button id="sharebtn" type="submit" class="btn btn-primary">Paylaş</button>
                                                     </div>
                                                 </form>
                                             </div>
@@ -217,20 +217,21 @@
 @section scripts{
     
     <script>
-        $("#sharebtn").click(function ()
-        {
-            $.ajax({
-                url: "/Home/FormPage",
-                data: {
-                    form: $("#createPost").serialize(),
-                    tagname: $("input[name='tagname']").val(),
-                    formImg: $("#imguploadpost").val()
-                },
-                type: "POST",
-                success: function (res) {
-                    console.log(res)
-                }
-            })
-        })
+        //$("#sharebtn").click(function ()
+        //{
+          
+        //    $.ajax({
+        //        url: "/Home/FormPage",
+        //        type: "POST",
+        //        contentType: 'multipart/form-data',
+        //        data: {
+        //            name: $("#formTitle").val(),
+        //            description: $("#formDesc").val()
+        //        },
+        //        success: function (res) {
+        //            console.log(res)
+        //        }
+        //    })
+        //})
     </script>
     }
