--- a/DevForm/DevFormAz/DevFormAz/Areas/AdminPanel/Views/Shared/_LayoutPage.cshtml
+++ b/DevForm/DevFormAz/DevFormAz/Areas/AdminPanel/Views/Shared/_LayoutPage.cshtml
@@ -25,14 +25,14 @@
         <!-- partial:partials/_sidebar.html -->
         <aside class="mdc-drawer mdc-drawer--dismissible mdc-drawer--open">
             <div class="mdc-drawer__header">
-                <a href="index.html" class="brand-logo">
-                    <img src="~/Areas/AdminPanel/Public/assets/images/logo.svg" alt="logo">
+                <a href="/AdminPanel/AdminHome/Index" class="brand-logo">
+                    <img src="~/Public/Images/Brand/BrandWhite.png" alt="logo">
                 </a>
             </div>
             <div class="mdc-drawer__content">
                 <div class="user-info">
-                    <p class="name">Clyde Miles</p>
-                    <p class="email">clydemiles@elenor.us</p>
+                    <p class="name">Nurlan Hüseynov</p>
+                    <p class="email">Nurlanah@code.edu.az</p>
                 </div>
                 <div class="mdc-list-group">
                     <nav class="mdc-list mdc-drawer-menu">
@@ -41,12 +41,12 @@
                                 <i class="material-icons mdc-list-item__start-detail mdc-drawer-item-icon" aria-hidden="true">home</i>
                                 Dashboard
                             </a>
+
                         </div>
+
                     </nav>
                 </div>
                 <div class="profile-actions">
-                    <a href="javascript:;">Settings</a>
-                    <span class="divider"></span>
                     <a href="/AdminPanel/AdminHome/Logout">Logout</a>
                 </div>
             </div>
@@ -58,27 +58,16 @@
                 <div class="mdc-top-app-bar__row">
                     <div class="mdc-top-app-bar__section mdc-top-app-bar__section--align-start">
                         <button class="material-icons mdc-top-app-bar__navigation-icon mdc-icon-button sidebar-toggler">menu</button>
-                        <span class="mdc-top-app-bar__title">Greetings Clyde!</span>
-                        <div class="mdc-text-field mdc-text-field--outlined mdc-text-field--with-leading-icon search-text-field d-none d-md-flex">
-                            <i class="material-icons mdc-text-field__icon">search</i>
-                            <input class="mdc-text-field__input" id="text-field-hero-input">
-                            <div class="mdc-notched-outline">
-                                <div class="mdc-notched-outline__leading"></div>
-                                <div class="mdc-notched-outline__notch">
-                                    <label for="text-field-hero-input" class="mdc-floating-label">Search..</label>
-                                </div>
-                                <div class="mdc-notched-outline__trailing"></div>
-                            </div>
-                        </div>
+                        <span class="mdc-top-app-bar__title">İdarəetmə panelinə xoş gəlmisiniz</span>
                     </div>
                     <div class="mdc-top-app-bar__section mdc-top-app-bar__section--align-end mdc-top-app-bar__section-right">
                         <div class="menu-button-container menu-profile d-none d-md-block">
                             <button class="mdc-button mdc-menu-button">
                                 <span class="d-flex align-items-center">
                                     <span class="figure">
-                                        <img src="~/Areas/AdminPanel/Public/assets/images/faces/face1.jpg" alt="user" class="user">
+                                        <img src="~/Public/Images/UsersFolder/ProfilePic/devAvatar.svg" alt="user" class="user">
                                     </span>
-                                    <span class="user-name">Clyde Miles</span>
+                                    <span class="user-name">Nurlan Hüseynov</span>
                                 </span>
                             </button>
                             <div class="mdc-menu mdc-menu-surface" tabindex="-1">
@@ -88,7 +77,7 @@
                                             <i class="mdi mdi-account-edit-outline text-primary"></i>
                                         </div>
                                         <div class="item-content d-flex align-items-start flex-column justify-content-center">
-                                            <h6 class="item-subject font-weight-normal">Edit profile</h6>
+                                            <h6 class="item-subject font-weight-normal"><a href="/Home/ProfilePage">Edit profile</a></h6>
                                         </div>
                                     </li>
                                     <li class="mdc-list-item" role="menuitem">
@@ -103,82 +92,11 @@
                             </div>
                         </div>
                         <div class="divider d-none d-md-block"></div>
-                        <div class="menu-button-container d-none d-md-block">
-                            <button class="mdc-button mdc-menu-button">
-                                <i class="mdi mdi-settings"></i>
-                            </button>
-                            <div class="mdc-menu mdc-menu-surface" tabindex="-1">
-                                <ul class="mdc-list" role="menu" aria-hidden="true" aria-orientation="vertical">
-                                    <li class="mdc-list-item" role="menuitem">
-                                        <div class="item-thumbnail item-thumbnail-icon-only">
-                                            <i class="mdi mdi-alert-circle-outline text-primary"></i>
-                                        </div>
-                                        <div class="item-content d-flex align-items-start flex-column justify-content-center">
-                                            <h6 class="item-subject font-weight-normal">Settings</h6>
-                                        </div>
-                                    </li>
-                                    <li class="mdc-list-item" role="menuitem">
-                                        <div class="item-thumbnail item-thumbnail-icon-only">
-                                            <i class="mdi mdi-progress-download text-primary"></i>
-                                        </div>
-                                        <div class="item-content d-flex align-items-start flex-column justify-content-center">
-                                            <h6 class="item-subject font-weight-normal">Update</h6>
-                                        </div>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="menu-button-container">
-                            <button class="mdc-button mdc-menu-button">
-                                <i class="mdi mdi-bell"></i>
-                            </button>
-                            <div class="mdc-menu mdc-menu-surface" tabindex="-1">
-                                <h6 class="title"> <i class="mdi mdi-bell-outline mr-2 tx-16"></i> Notifications</h6>
-                                <ul class="mdc-list" role="menu" aria-hidden="true" aria-orientation="vertical">
-                                    <li class="mdc-list-item" role="menuitem">
-                                        <div class="item-thumbnail item-thumbnail-icon">
-                                            <i class="mdi mdi-email-outline"></i>
-                                        </div>
-                                        <div class="item-content d-flex align-items-start flex-column justify-content-center">
-                                            <h6 class="item-subject font-weight-normal">You received a new message</h6>
-                                            <small class="text-muted"> 6 min ago </small>
-                                        </div>
-                                    </li>
-                                    <li class="mdc-list-item" role="menuitem">
-                                        <div class="item-thumbnail item-thumbnail-icon">
-                                            <i class="mdi mdi-account-outline"></i>
-                                        </div>
-                                        <div class="item-content d-flex align-items-start flex-column justify-content-center">
-                                            <h6 class="item-subject font-weight-normal">New user registered</h6>
-                                            <small class="text-muted"> 15 min ago </small>
-                                        </div>
-                                    </li>
-                                    <li class="mdc-list-item" role="menuitem">
-                                        <div class="item-thumbnail item-thumbnail-icon">
-                                            <i class="mdi mdi-alert-circle-outline"></i>
-                                        </div>
-                                        <div class="item-content d-flex align-items-start flex-column justify-content-center">
-                                            <h6 class="item-subject font-weight-normal">System Alert</h6>
-                                            <small class="text-muted"> 2 days ago </small>
-                                        </div>
-                                    </li>
-                                    <li class="mdc-list-item" role="menuitem">
-                                        <div class="item-thumbnail item-thumbnail-icon">
-                                            <i class="mdi mdi-update"></i>
-                                        </div>
-                                        <div class="item-content d-flex align-items-start flex-column justify-content-center">
-                                            <h6 class="item-subject font-weight-normal">You have a new update</h6>
-                                            <small class="text-muted"> 3 days ago </small>
-                                        </div>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
                         <div class="menu-button-container">
                             <button class="mdc-button mdc-menu-button">
                                 <i class="mdi mdi-email"></i>
                                 <span class="count-indicator">
-                                    <span class="count">3</span>
+                                    <span class="count">0</span>
                                 </span>
                             </button>
                             <div class="mdc-menu mdc-menu-surface" tabindex="-1">
@@ -191,24 +109,6 @@
                                         <div class="item-content d-flex align-items-start flex-column justify-content-center">
                                             <h6 class="item-subject font-weight-normal">Mark send you a message</h6>
                                             <small class="text-muted"> 1 Minutes ago </small>
-                                        </div>
-                                    </li>
-                                    <li class="mdc-list-item" role="menuitem">
-                                        <div class="item-thumbnail">
-                                            <img src="~/Areas/AdminPanel/Public/assets/images/faces/face2.jpg" alt="user">
-                                        </div>
-                                        <div class="item-content d-flex align-items-start flex-column justify-content-center">
-                                            <h6 class="item-subject font-weight-normal">Cregh send you a message</h6>
-                                            <small class="text-muted"> 15 Minutes ago </small>
-                                        </div>
-                                    </li>
-                                    <li class="mdc-list-item" role="menuitem">
-                                        <div class="item-thumbnail">
-                                            <img src="~/Areas/AdminPanel/Public/assets/images/faces/face3.jpg" alt="user">
-                                        </div>
-                                        <div class="item-content d-flex align-items-start flex-column justify-content-center">
-                                            <h6 class="item-subject font-weight-normal">Profile picture updated</h6>
-                                            <small class="text-muted"> 18 Minutes ago </small>
                                         </div>
                                     </li>
                                 </ul>
